--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header>
-      <nav>
+      <nav class="container">
         <ul>
           <li>Home</li>
           <li>Menu</li>
@@ -21,21 +21,40 @@
           <li>Order Now</li>
         </ul>
       </nav>
-      <h1>Bob's Burgers</h1>
-    <button>Order Now</button>
+      <div class="jumbotron">
+        <img src="img/logo.png" alt="Bob's Burgers Logo" title="Bob's Burgers Logo">
+        <button>Order Now</button>
+      </div>
     </header>
     <main>
-      <article>
-        <h2>World's Best Burgers</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
-        <button>View Menu</button>
+      <article class="container">
+        <div class="row">
+          <div class="col-md-8">
+            <h2>World's Best Burgers</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
+          <button>View Menu</button>
+          </div>
+          <div class="col-md-4">
+            <img src="img/bobs-burger.png" alt="Hamburger" title="Image of Hamburger">
+          </div>
+        </div>
       </article>
-      <article>
-        <h2>Dine-in or Take-out</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
-        <button>Contact Us</button>
+      <article class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <img src="img/bob-headshot.png" alt="Bob" title="Image of Bob">
+          </div>
+          <div class="col-md-8">
+            <h2>Dine-in or Take-out</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
+            <button>Contact Us</button>
+          </div>
+        </div>
       </article>
     </main>
+    <footer>
+
+    </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
