--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </article>
     </main>
     <footer>
-
+      <img src="img/logo.png" alt="Bob's Burgers Logo" title="Bob's Burgers Logo">
     </footer>
 
     <!-- Optional JavaScript -->
