--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="css/main.css">
+    
     <title></title>
     <meta name="description" content="">
   </head>
@@ -21,7 +24,7 @@
           <li>Order Now</li>
         </ul>
       </nav>
-      <div class="jumbotron">
+      <div class="jumbotron container-flex">
         <img src="img/logo.png" alt="Bob's Burgers Logo" title="Bob's Burgers Logo">
         <button>Order Now</button>
       </div>
