--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
         </ul>
       </nav>
       <div class="jumbotron container-flex">
-        <img src="img/logo.png" alt="Bob's Burgers Logo" title="Bob's Burgers Logo">
-        <button>Order Now</button>
+        <div class="header-content container">
+          <img src="img/logo.png" alt="Bob's Burgers Logo" title="Bob's Burgers Logo">
+          <button>Order Now</button>
+        </div>
       </div>
     </header>
     <main>
