--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
             <button>View Menu</button>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 img-center">
               <img src="img/bobs-burger.png" alt="Hamburger" title="Image of Hamburger">
             </div>
           </div>
@@ -49,7 +49,7 @@
       <article>
         <div class="container">
           <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4 img-center">
               <img src="img/bob-headshot.png" alt="Bob" title="Image of Bob">
             </div>
             <div class="col-md-8">
