added overlay to jumbotron image

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
           <img src="img/logo.png" alt="Bob's Burgers Logo" title="Bob's Burgers Logo">
           <button>Order Now</button>
         </div>
+        <div class="overlay"></div>
       </div>
     </header>
     <main>
