Add title to index page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/main.css">
     
-    <title></title>
+    <title>Brydon Holsey | Homework 3</title>
     <meta name="description" content="">
   </head>
   <body>
